# EmojiMaker_Streamlit

./: .env.example  Homepage.py  README.md  main.py  pyproject.toml  requirements.txt  🏠Homepage.py
.streamlit/: config.toml
pages/: OpenAI.py  Pinecone.py  🔋Pinecone.py  🤖OpenAISettings.py
src/: Config.py
src/utils/: getRandomColors.py  llm.py
src/view/: Home.py  OpenAISettings.py  Pinecone.py
