[tool.poetry]
name = "chatapp"
version = "0.1.0"
description = "Base ChatAPP make by streamlit"
authors = ["Zeno"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.32.0"
langchain = "^0.1.11"
openai = "^1.13.3"
tiktoken = "^0.6.0"
pinecone-client = "^3.1.0"
pillow = "^10.2.0"
langchain-openai = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
